--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>It is alive!! Alive !!!</h1>
+    <h2>That was not that hard...</h2>
   </main>
 </body>
 
