--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>Showing API message : <b id="name">...</b></p>
   </main>
 
+  <a href="./auth/login/twitter">Login</a>
   <script>
     (async function() {
       let txt = await (await fetch('api/message')).text();
