--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <main>
-    <h1>It is alive!! Alive !!! With routing ! V9</h1>
+    <h1>It is alive!! Alive !!! With routing ! V10</h1>
     <h2>That was not that hard...</h2>
     <p>Showing API message : <b id="name">...</b></p>
   </main>
 
-  <a href="./auth/login/twitter">Login</a>
+  <a href="./.auth/login/twitter">Login</a>
   <script>
     (async function() {
       let txt = await (await fetch('api/message')).text();
