--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,8 @@
     <h1>It is alive!! Alive !!! With routing ! V11</h1>
     <h2>That was not that hard...</h2>
     <p>Showing API message : <b id="name">...</b></p>
-    <p><a href="/.auth/login/twitter?post_login_redirect_uri=/ok">Login</a></a></p>
+    <p><a href="/.auth/login/twitter?post_login_redirect_uri=/ok">Login</a></p>
+    <p><a href="/.auth/logout?post_logout_redirect_uri=/bye">Log Out</a></p>
   </main>
 
   <script>
