--- a/userinfo.html
+++ b/userinfo.html
@@ -20,6 +20,8 @@
             document.querySelector("#info").innerHTML=txt;
         }
 
+        getUserInfo();
+
     </script>
 </body>
 </html>
